[package]
name = "sdl2-mouse-motion-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", default-features = false, features = ["raw-window-handle", "bundled"] }
glam = { version = "0.20.5", features = [ "bytemuck" ]}
wgpu = "0.12.0"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
pollster = "0.2.5"
